assets/css/style.css
/*** Background style sections **/

#bg-dark {
    background-color: #2F3E46;
    height: 130px;
} 

.body-light-green {
    background-color: #64906E;
    height: 52vh;
}

.background-footer {
    background-color: #2F3E46;
}

/*** Text style section **/

.body-text {
    color: #F5F5F5;
    font-family: 'Noto Sans', sans-serif;
    font-size: 25px;
    font-weight: 500;
}

footer p {
    color: #f5f5f5;
    font-family: 'Noto Sans', sans-serif;
    font-size: 14px;
    margin-top: 25px;
}

.navbar-brand {
    font-size: 20px;
    color: #f5f5f5;
    text-decoration: none;
    white-space: nowrap;
    font-family: 'Noto Sans', sans-serif;
    margin-left: 10%; 
}

/*** Header style sections **/

/*** Body style sections **/

.top-currency-box {
    margin-top: 75px;
    margin-bottom: 20px;
    font-size: 23px;
    font-family: "Noto Sans", sans-serif;
    font-weight: 500;
} 

.currency-box {
    margin-top: 20px;
    margin-bottom: 20px;
}

.selection-box {
    max-width: 300px; 
    font-size: 23px;
    font-family: "Noto Sans", sans-serif;
    font-weight: 500;
}

.conversion-button {
    background-color: #52796f;
    color: #f5f5f5;
    border-color: #f5f5f5;
    border-width: 1px;
    font-family: "Noto Sans", sans-serif;]
    font-size: 23px;
    font-weight: 500;
}

.conversion-button:hover {
    background-color: #f5f5f5;
    color: #52796f;
    border-color: #52796f;
    border-width: 3px;
    font-family: "Noto Sans", sans-serif;
    font-weight: 500;
}

#hero {
    max-height: 25vh;
    min-height: 25vh;
    width: 100%;
    background-image: url(../images/forex-board.webp);
    position: relative;
    z-index: 2;
}

/*** Foooter style section **/

.footer-bottom {
    min-height: 10vh;
    min-width: 100%;
    position: absolute;
    bottom: 0;
}

/** Container override **/

.container-override {
    min-width: 100%;
}

.padding-margin-override {
    padding-left: 0px;
    padding-right: 0px;
    margin-left: 0px;
    margin-right: 0px;
}

.row {
    --bs-gutter-x: 0;
    --bs-gutter-y: 0;
}

.container {
    --bs-gutter-x: 0;
    --bs-gutter-y: 0;
} 

.container-fluid {
    --bs-gutter-x: 0;
    --bs-gutter-y: 0;
}

